--- a/Link/package.json
+++ b/Link/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
